Prevent image from sticking out

--- a/src/app/property/property-card/property-card.component.scss
+++ b/src/app/property/property-card/property-card.component.scss
@@ -13,3 +13,7 @@
   transition-duration: 500ms;
   transition-timing-function: ease-out;
 }
+
+.img-wrapper {
+  overflow: hidden;
+}
